# LHCb_CellularAutomata_TrackReconstruction

./: .gitignore  CMakeLists.txt  LICENSE  README.md
FLOPS/: umask_raw.txt
include/: Common.h  Tools.h  computation.h
src/: Tools.cpp  main.cpp  main_pcm.cpp  runCellularAutomaton.cpp
